--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <form class="popup__form popup__form_type_edit" name="formEdit" novalidate>
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <input id="input-name" class="popup__input popup__input_name" type="text" placeholder="Имя" value="" name="name" required minlength="2" maxlength="40">
-                    <span class="popup__input-span input-name-error"></span>
+                    <span class="popup__span input-name-error"></span>
                     <input id="input-job" class="popup__input popup__input_job" type="text" placeholder="О себе" value="" name="job" required minlength="2" maxlength="200">
-                    <span class="popup__input-span input-job-error"></span>
-                    <button type="submit" class="popup__button popup__button_disabled" disabled>Сохранить</button>
+                    <span class="popup__span input-job-error"></span>
+                    <button type="submit" class="popup__button popup__button_disabled">Сохранить</button>
                 </form>
             </div>
         </div>
@@ -60,10 +60,10 @@
                 <form class="popup__form popup__form_type_add" id="formAdd" novalidate>
                     <h2 class="popup__title">Новое место</h2>
                     <input id="input-title" class="popup__input popup__input_title" type="text" placeholder="Название" name="place" minlength="2" maxlength="30" required>
-                    <span class="popup__input-span input-title-error"> </span>
+                    <span class="popup__span input-title-error"> </span>
                     <input id="input-url" class="popup__input popup__input_image" type="url" placeholder="Ссылка на картинку" name="link" required>
-                    <span class="popup__input-span input-url-error"> </span>
-                    <button type="submit" class="popup__button popup__button_disabled" disabled>Создать</button>
+                    <span class="popup__span input-url-error"> </span>
+                    <button type="submit" class="popup__button popup__button_disabled">Создать</button>
                 </form>
             </div>
         </div>
