--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             </div>
         </div>
     </div>
-    <script src="scripts/validate.js"></script>
-    <script src="scripts/cards.js"></script>
-    <script src="scripts/script.js"></script>
+    <script type="module" src="scripts/validate.js"></script>
+    <script type="module" src="scripts/cards.js"></script>
+    <script type="module" src="scripts/script.js"></script>
 </body>
 
 </html>
