--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
         </div>
     </div>
     <script type="module" src="scripts/validate.js"></script>
-    <script type="module" src="scripts/cards.js"></script>
+    <script type="module" src="scripts/Card.js"></script>
+    <script type="module" src="scripts/initial cards.js"></script>
     <script type="module" src="scripts/script.js"></script>
 </body>
 
