--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             </div>
         </div>
     </div>
-    <script type="module" src="scripts/validate.js"></script>
+    <script type="module" src="scripts/FormValidator.js"></script>
     <script type="module" src="scripts/Card.js"></script>
-    <script type="module" src="scripts/initial cards.js"></script>
+    <script type="module" src="scripts/initialCards.js"></script>
     <script type="module" src="scripts/script.js"></script>
 </body>
 
