--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../pages/index.css">
+    <link rel="stylesheet" href="pages/index.css">
     <title>Mesto</title>
 </head>
 
 <body class="body">
     <div class="page">
         <header class="header">
-            <img class="header__logo" src="../images/Vector.svg" alt='Логотип'>
+            <img class="header__logo" src="./images/Vector.svg" alt='Логотип'>
         </header>
         <main class="content">
             <section class="profile">
                 <div class="profile__card">
-                    <img class="profile__avatar" src="../images/image.jpg" alt="Аватар">
+                    <img class="profile__avatar" src="./images/image.jpg" alt="Аватар">
                     <div class="profile__info">
                         <h1 class="profile__name">Жак-Ив-Кусто</h1>
                         <button class="profile__button" type="button"></button>
@@ -76,7 +76,7 @@
             </div>
         </div>
     </div>
-    <script type="module" src="../pages/index.js"></script>
+    <script type="module" src="./pages/index.js"></script>
 </body>
 
 </html>
