--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
                 <button class="popup__close popup__close_add" type="button"></button>
                 <form class="popup__form popup__form_type_add" id="formAdd" novalidate>
                     <h2 class="popup__title">Новое место</h2>
-                    <input id="input-title" class="popup__input popup__input_title" type="text" placeholder="Название" name="place" minlength="2" maxlength="30" required>
+                    <input id="input-title" class="popup__input popup__input_title" type="text" placeholder="Название" name="name" minlength="2" maxlength="30" required>
                     <span class="popup__span input-title-error"> </span>
                     <input id="input-url" class="popup__input popup__input_image" type="url" placeholder="Ссылка на картинку" name="link" required>
                     <span class="popup__span input-url-error"> </span>
