--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             <section class="profile">
                 <div class="profile__card">
                     <div class="profile__avatar">
-                        <img class="profile__image" src="" alt="Аватар">
+                        <img class="profile__image" src="<%=require('../src/images/image.jpg')%>" alt="Аватар">
                         <button class="profile__avatar_button"></button>
                     </div>
                     <div class="profile__info">
