--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
                 <button class="popup__close" type="button"></button>
                 <form class="popup__form">
                     <h2 class="popup__title">Обновить аватар</h2>
-                    <input id="input-url" class="popup__input" type="url" placeholder="Ссылка на аватар" name="link" required>
+                    <input id="input-url" class="popup__input popup__input_image" type="url" placeholder="Ссылка на аватар" name="link" required>
                     <span class="popup__span input-url-error"> </span>
                     <button type="submit" class="popup__button">Сохранить</button>
                 </form>
