--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
                 <h2 class="popup__subtitle"></h2>
             </div>
         </div>
-        <div id='popupDelete' class="popup  popup_type_delete">
+        <div id='popupDelete' class="popup popup_type_delete">
             <div class="popup__content">
                 <button class="popup__close" type="button"></button>
                 <form class="popup__form popup__form_delete">
@@ -94,8 +94,8 @@
                 <button class="popup__close" type="button"></button>
                 <form class="popup__form">
                     <h2 class="popup__title">Обновить аватар</h2>
-                    <input id="input-url" class="popup__input popup__input_image" type="url" placeholder="Ссылка на аватар" name="link" required>
-                    <span class="popup__span input-url-error"> </span>
+                    <input id="input-avatar" class="popup__input popup__input_image" type="url" placeholder="Ссылка на аватар" name="avatar" required>
+                    <span class="popup__span input-avatar-error"> </span>
                     <button type="submit" class="popup__button">Сохранить</button>
                 </form>
             </div>
